# MPC_server_Odoo

./: .dockerignore  .env.example  ARCHITECTURE_MCP.md  DOCKER.md  Dockerfile  HTTP_API_README.md  Procfile  README.md  deploy.sh  deploy_test.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements-docker.txt  requirements.txt  test_docker.py  test_http_api.py
odoo_mcp_server/: __init__.py  __main__.py  http_server.py  main.py  odoo_client.py  server.py
